Fix onion url button padding on mobile

--- a/assets/rtl.css
+++ b/assets/rtl.css
@@ -31,7 +31,7 @@ h1, h2 {
     left: 2%;
 }
 
-.onion-url-desktop {
+.onion-url-desktop, .onion-url-mobile {
     padding: 2%;
     padding-left: 24px;
 }
